--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-i18n-tc2sc",
   "version": "1.0.0",
-  "description": "",
+  "description": "A module used auto generate simplified chinese (sc) from traditional chinese (tc) in nuxt-i18n",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
